--- a/src/app/components/table-dynamic-demo/table-dynamic-demo.component.html
+++ b/src/app/components/table-dynamic-demo/table-dynamic-demo.component.html
@@ -1,4 +1,17 @@
 <p-table [value]="products" styleClass="p-datatable-responsive-demo">
+  <ng-template pTemplate="caption">
+    <div style="text-align: right">
+      <i class="pi pi-search" style="margin: 4px 4px 0 0"></i>
+      <input
+        type="text"
+        pInputText
+        size="50"
+        placeholder="Global Filter"
+        (input)="searchTable($event)"
+        style="width: auto"
+      />
+    </div>
+  </ng-template>
   <ng-template pTemplate="header">
     <tr>
       <th>ID</th>
