--- a/src/app/components/table-dynamic-demo/table-dynamic-demo.component.html
+++ b/src/app/components/table-dynamic-demo/table-dynamic-demo.component.html
@@ -1,14 +1,12 @@
 <p-table [value]="products" styleClass="p-datatable-responsive-demo">
   <ng-template pTemplate="caption">
-    <div style="text-align: right">
+    <div style="text-align: left">
       <i class="pi pi-search" style="margin: 4px 4px 0 0"></i>
       <input
         type="text"
         pInputText
-        size="50"
-        placeholder="Global Filter"
+        placeholder="Search name product"
         (input)="searchTable($event)"
-        style="width: auto"
       />
     </div>
   </ng-template>
